# Web_HW_10

./: pyproject.toml
hw_project/hw_10_DB/: ini
hw_project/hw_10_DB/data/: postmaster.pid
hw_project/hw_10_DB/data/base/1/: pg_internal.init
hw_project/hw_10_DB/data/base/5/: 1247  1249  1259  16388  16389  16394  16396  16397  16400  16402  16404  (+74 more)
hw_project/hw_10_DB/data/global/: 1260  pg_control  pg_internal.init
hw_project/hw_10_DB/data/pg_xact/: 0000
hw_project/hw_project/: settings.py
hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: author.html  base.html  create_author.html  create_quote.html  create_tag.html  index.html  tag_search.html
hw_project/quotes/templatetags/: extract.py
hw_project/utils/Load_mongoDB/: load_json.py  parser_BS4.py
hw_project/utils/Load_mongoDB/Json/: authors.json
hw_project/utils/Migration/: migration.py
lesson/My_site/My_site/: settings.py  urls.py
lesson/My_site/polls/: views.py
lesson/My_site/polls/migrations/: 0001_initial.py
mysite/mysite/: settings.py
mysite/polls/: urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
notes/noteapp/: admin.py  models.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_tag_tag_of_username.py
notes/noteapp/templates/noteapp/: base.html  detail.html  index.html  note.html
notes/notes/: settings.py  urls.py
notes/users/: urls.py  views.py
notes/users/migrations/: 0001_initial.py
notes/users/templates/users/: signup.html
